working home page w js lightbox

--- a/pages/documentary.html
+++ b/pages/documentary.html
@@ -2,9 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Documentary</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="../style/javascript/navJS.js"></script>
+    <link rel="stylesheet" href="../style/css/mystyle.css">
 </head>
 <body>
+<nav class="navbar custom-nav">
+    <div class="container-fluid">
 
+        <div class="navbar-header">
+            <a class="navbar-brand" href="home.html">HOMBOI PHOTOGRAPHY</a>
+        </div>
+
+        <div  class="nav navbar-nav navbar-right" style="text-transform: uppercase">
+            <ul class="nav navbar-nav">
+                <li><a href="home.html">Home</a></li>
+
+                <li class="portDrop">
+                    <a href="portfolio.html" class="dropdown-toggle" data-toggle="dropdown">
+                        Portfolio
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="documentary.html">Documentary</a></li>
+                        <li><a href="portraits.html">Portrait</a></li>
+                        <li><a href="phonePhotography.html">Phone Photography</a></li>
+                        <li><a href="weddings.html">Weddings</a></li>
+                    </ul>
+                </li>
+
+                <li><a href="packages.html">Packages</a></li>
+                <li><a href="contacts.html">Contacts</a></li>
+                <li><a href="aboutUs.html">About Us</a></li>
+            </ul>
+        </div>
+
+    </div>
+</nav>
 </body>
 </html>
