homepage and portfolio done working on port pages

--- a/pages/home.html
+++ b/pages/home.html
@@ -17,7 +17,7 @@
 
 <div class="homeHeader jumbotron palette">
     <h1 style="text-transform: uppercase; font-weight: 200">Homboi Photography</h1>
-    <h3 style="text-transform: uppercase; font-weight: 100; color: white">Capture it all</h3>
+    <h4 style="text-transform: uppercase; font-weight: 100; color: white">Capture it all</h4>
 </div>
 
 <nav class="navbar custom-nav">
@@ -38,8 +38,8 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="documentary.html">Documentary</a></li>
-                        <li><a href="portraits.html">Portrait</a></li>
                         <li><a href="phonePhotography.html">Phone Photography</a></li>
+                        <li><a href="portraits.html">Portrait</a></li>
                         <li><a href="weddings.html">Weddings</a></li>
                     </ul>
                 </li>
@@ -89,7 +89,7 @@
     </a>
 </div>
 
-<div class="container-fluid wcMsg">
+<div class="container-fluid msgCont">
     <h1 style="text-transform: uppercase; font-weight: 200">
         Hi, Welcome to Homboi Photography
     </h1>
@@ -116,9 +116,25 @@
     </div>
 </div>
 
+<div class="container-fluid msgCont" style="margin-top: 5vh">
+    <h2 style="font-weight: 100; text-transform: uppercase; margin-bottom: 3vh">Learn More:</h2>
+    <ul class="pagination">
+        <li style="font-weight: 200; text-transform: uppercase"><a href="portfolio.html">Portfolio</a></li>
+        <li style="font-weight: 200; text-transform: uppercase"><a href="packages.html">Packages</a></li>
+        <li style="font-weight: 200; text-transform: uppercase"><a href="contacts.html">Contacts</a></li>
+        <li style="font-weight: 200; text-transform: uppercase"><a href="aboutUs.html">About Us</a></li>
+    </ul>
+</div>
+
 <div id="lightbox" class="lightbox">
     <img id="lightbox-img" src="" alt="lightbox">
 </div>
 
 </body>
+
+<footer class="footerCnt">
+    <div class="container-fluid msgCont">
+        <h4 style="font-weight: 200">I will end it all :)</h4>
+    </div>
+</footer>
 </html>
