--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="preload" href="../style/fonts/Lato/Lato-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="../style/javascript/navJS.js"></script>
@@ -14,8 +15,8 @@
 <body>
 
 <div class="homeHeader jumbotron palette">
-    <h1 style="text-transform: uppercase; font-weight: 200">Homboi Photography</h1>
-    <h3 style="text-transform: uppercase; font-weight: 100; color: white">Capture it all</h3>
+    <h1 style="text-transform: uppercase; font-weight: 200">Portfolio</h1>
+    <h4 style="text-transform: uppercase; font-weight: 100; color: white">Moments frozen in time</h4>
 </div>
 
 <nav class="navbar custom-nav">
@@ -50,5 +51,38 @@
 
     </div>
 </nav>
+
+<div class="container-fluid prtCont">
+
+    <div class="col-sm-3 prtBanner">
+        <a href="documentary.html">
+            <img src="../images/sample2.jpg" class="img-fluid w-100" style="height: 100%">
+            <div class="hover-text">Documentary</div>
+        </a>
+    </div>
+
+    <div class="col-sm-3 prtBanner">
+        <a href="phonePhotography.html">
+            <img src="../images/sample5.jpg" class="img-fluid w-100" style="height: 100%">
+            <div class="hover-text">Phone Photography</div>
+        </a>
+    </div>
+
+    <div class="col-sm-3 prtBanner">
+        <a href="portraits.html">
+            <img src="../images/sample9.jpg" class="img-fluid w-100" style="height: 100%">
+            <div class="hover-text">Portrait</div>
+        </a>
+    </div>
+
+    <div class="col-sm-3 prtBanner">
+        <a href="weddings.html">
+            <img src="../images/sample.jpg" class="img-fluid w-100" style="height: 100%">
+            <div class="hover-text">Weddings</div>
+        </a>
+    </div>
+
+</div>
+
 </body>
 </html>
