--- a/pages/documentary.html
+++ b/pages/documentary.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="../style/css/mystyle.css">
 </head>
 <body>
+<div class="homeHeader jumbotron palette">
+    <h1 style="text-transform: uppercase; font-weight: 200">Documentary</h1>
+    <h4 style="text-transform: uppercase; font-weight: 100; color: white"></h4>
+</div>
+
 <nav class="navbar custom-nav">
     <div class="container-fluid">
 
