--- a/pages/portraits.html
+++ b/pages/portraits.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="../style/css/mystyle.css">
 </head>
 <body>
+
+<div class="homeHeader jumbotron palette">
+    <h1 style="text-transform: uppercase; font-weight: 200">Portraits</h1>
+    <h4 style="text-transform: uppercase; font-weight: 100; color: white"></h4>
+</div>
+
 <nav class="navbar custom-nav">
     <div class="container-fluid">
 
@@ -30,8 +36,8 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="documentary.html">Documentary</a></li>
-                        <li><a href="portraits.html">Portrait</a></li>
                         <li><a href="phonePhotography.html">Phone Photography</a></li>
+                        <li><a href="portraits.html">Portrait</a></li>
                         <li><a href="weddings.html">Weddings</a></li>
                     </ul>
                 </li>
