--- a/pages/home.html
+++ b/pages/home.html
@@ -27,15 +27,12 @@
             <a class="navbar-brand" href="home.html">HOMBOI PHOTOGRAPHY</a>
         </div>
 
-        <div  class="nav navbar-nav navbar-right" style="text-transform: uppercase">
+        <div class="nav navbar-nav navbar-right" style="text-transform: uppercase">
             <ul class="nav navbar-nav">
                 <li><a href="home.html">Home</a></li>
 
                 <li class="portDrop">
-                    <a href="portfolio.html" class="dropdown-toggle" data-toggle="dropdown">
-                        Portfolio
-                        <span class="caret"></span>
-                    </a>
+                    <a href="portfolio.html">Portfolio <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="documentary.html">Documentary</a></li>
                         <li><a href="phonePhotography.html">Phone Photography</a></li>
@@ -96,23 +93,23 @@
     <h4 style="text-transform: uppercase; font-weight: 100">First impressions matter. Take a look and decide for yourself.</h4>
 </div>
 
-<div class="miniGallery">
-    <div class="mgRow">
-        <div><img class="clickable-img col-sm-4 img-thumbnail" src="../images/sample7.jpg" alt="image"></div>
-        <div><img class="clickable-img col-sm-4 img-thumbnail" src="../images/sample8.jpg" alt="image"></div>
-        <div><img class="clickable-img col-sm-4 img-thumbnail" src="../images/sample9.jpg" alt="image"></div>
+<div class="container-fluid miniGallery">
+    <div class="col-sm-4 mgRow">
+        <img class="clickable-img" src="../images/sample7.jpg" alt="image">
+        <img class="clickable-img" src="../images/sample8.jpg" alt="image">
+        <img class="clickable-img" src="../images/sample9.jpg" alt="image">
     </div>
 
-    <div class="mgRow">
-        <div><img class="clickable-img col-sm-4 img-thumbnail" src="../images/sample8.jpg" alt="image"></div>
-        <div><img class="clickable-img col-sm-4 img-thumbnail" src="../images/sample9.jpg" alt="image"></div>
-        <div><img class="clickable-img col-sm-4 img-thumbnail" src="../images/sample10.jpg" alt="image"></div>
+    <div class="col-sm-4 mgRow">
+        <img class="clickable-img" src="../images/sample8.jpg" alt="image">
+        <img class="clickable-img" src="../images/sample9.jpg" alt="image">
+        <img class="clickable-img" src="../images/sample10.jpg" alt="image">
     </div>
 
-    <div class="mgRow">
-        <div><img class="clickable-img col-sm-4 img-thumbnail" src="../images/sample10.jpg" alt="image"></div>
-        <div><img class="clickable-img col-sm-4 img-thumbnail" src="../images/sample7.jpg" alt="image"></div>
-        <div><img class="clickable-img col-sm-4 img-thumbnail" src="../images/sample8.jpg" alt="image"></div>
+    <div class="col-sm-4 mgRow">
+        <img class="clickable-img" src="../images/sample10.jpg" alt="image">
+        <img class="clickable-img" src="../images/sample7.jpg" alt="image">
+        <img class="clickable-img" src="../images/sample8.jpg" alt="image">
     </div>
 </div>
 
