--- a/pages/packages.html
+++ b/pages/packages.html
@@ -19,15 +19,12 @@
             <a class="navbar-brand" href="home.html">HOMBOI PHOTOGRAPHY</a>
         </div>
 
-        <div  class="nav navbar-nav navbar-right" style="text-transform: uppercase">
+        <div class="nav navbar-nav navbar-right" style="text-transform: uppercase">
             <ul class="nav navbar-nav">
                 <li><a href="home.html">Home</a></li>
 
                 <li class="portDrop">
-                    <a href="portfolio.html" class="dropdown-toggle" data-toggle="dropdown">
-                        Portfolio
-                        <span class="caret"></span>
-                    </a>
+                    <a href="portfolio.html">Portfolio <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="documentary.html">Documentary</a></li>
                         <li><a href="phonePhotography.html">Phone Photography</a></li>
