--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="../style/javascript/navJS.js"></script>
+    <script src="../style/javascript/lightbox.js"></script>
     <link rel="stylesheet" href="../style/css/mystyle.css">
 </head>
 <body>
@@ -26,19 +27,16 @@
             <a class="navbar-brand" href="home.html">HOMBOI PHOTOGRAPHY</a>
         </div>
 
-        <div  class="nav navbar-nav navbar-right" style="text-transform: uppercase">
+        <div class="nav navbar-nav navbar-right" style="text-transform: uppercase">
             <ul class="nav navbar-nav">
                 <li><a href="home.html">Home</a></li>
 
                 <li class="portDrop">
-                    <a href="portfolio.html" class="dropdown-toggle" data-toggle="dropdown">
-                        Portfolio
-                        <span class="caret"></span>
-                    </a>
+                    <a href="portfolio.html">Portfolio <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="documentary.html">Documentary</a></li>
-                        <li><a href="portraits.html">Portrait</a></li>
                         <li><a href="phonePhotography.html">Phone Photography</a></li>
+                        <li><a href="portraits.html">Portrait</a></li>
                         <li><a href="weddings.html">Weddings</a></li>
                     </ul>
                 </li>
@@ -51,6 +49,42 @@
 
     </div>
 </nav>
+
+<div class="container-fluid prtChCont">
+    <div class="col-sm-4 chImgCol">
+        <img class="clickable-img" src="../images/sample.jpg">
+        <img class="clickable-img" src="../images/sample2.jpg">
+        <img class="clickable-img" src="../images/sample7.jpg">
+        <img class="clickable-img" src="../images/sample2.jpg">
+        <img class="clickable-img" src="../images/sample6.jpg">
+        <img class="clickable-img" src="../images/sample9.jpg">
+    </div>
+    <div class="col-sm-4 chImgCol">
+        <img class="clickable-img" src="../images/sample3.jpg">
+        <img class="clickable-img" src="../images/sample4.jpg">
+        <img class="clickable-img" src="../images/sample2.jpg">
+        <img class="clickable-img" src="../images/sample.jpg">
+        <img class="clickable-img" src="../images/sample2.jpg">
+        <img class="clickable-img" src="../images/sample7.jpg">
+    </div>
+    <div class="col-sm-4 chImgCol">
+        <img class="clickable-img" src="../images/sample2.jpg">
+        <img class="clickable-img" src="../images/sample6.jpg">
+        <img class="clickable-img" src="../images/sample9.jpg">
+        <img class="clickable-img" src="../images/sample3.jpg">
+        <img class="clickable-img" src="../images/sample4.jpg">
+        <img class="clickable-img" src="../images/sample2.jpg">
+    </div>
+</div>
+
+<div class="container-fluid msgCont">
+    <h2 style="text-transform: uppercase; font-weight: 200">
+        You want more?
+    </h2>
+    <h4 style="text-transform: uppercase; font-weight: 100">Feel free to take a look at our collections below</h4>
+</div>
+
+
 
 <div class="container-fluid prtCont">
 
@@ -83,6 +117,11 @@
     </div>
 
 </div>
+
+<div id="lightbox" class="lightbox">
+    <img id="lightbox-img" src="" alt="lightbox">
+</div>
+
 
 </body>
 </html>
