homepage, portfolio, all portfolio pages, package working,inquiry and about us and footer left

--- a/pages/home.html
+++ b/pages/home.html
@@ -42,7 +42,7 @@
                 </li>
 
                 <li><a href="packages.html">Packages</a></li>
-                <li><a href="contacts.html">Contacts</a></li>
+                <li><a href="inquiry.html">Inquire</a></li>
                 <li><a href="aboutUs.html">About Us</a></li>
             </ul>
         </div>
@@ -118,7 +118,7 @@
     <ul class="pagination">
         <li style="font-weight: 200; text-transform: uppercase"><a href="portfolio.html">Portfolio</a></li>
         <li style="font-weight: 200; text-transform: uppercase"><a href="packages.html">Packages</a></li>
-        <li style="font-weight: 200; text-transform: uppercase"><a href="contacts.html">Contacts</a></li>
+        <li style="font-weight: 200; text-transform: uppercase"><a href="inquiry.html">Inquire</a></li>
         <li style="font-weight: 200; text-transform: uppercase"><a href="aboutUs.html">About Us</a></li>
     </ul>
 </div>
