--- a/pages/packages.html
+++ b/pages/packages.html
@@ -5,6 +5,7 @@
     <title>Packages</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preload" href="../style/fonts/Lato/Lato-Regular.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -12,6 +13,11 @@
     <link rel="stylesheet" href="../style/css/mystyle.css">
 </head>
 <body>
+<div class="homeHeader jumbotron palette">
+    <h1 style="text-transform: uppercase; font-weight: 200">Packages</h1>
+    <h4 style="text-transform: uppercase; font-weight: 100; color: white">Greatness comes at a price</h4>
+</div>
+
 <nav class="navbar custom-nav">
     <div class="container-fluid">
 
@@ -34,12 +40,105 @@
                 </li>
 
                 <li><a href="packages.html">Packages</a></li>
-                <li><a href="contacts.html">Contacts</a></li>
+                <li><a href="inquiry.html">Inquire</a></li>
                 <li><a href="aboutUs.html">About Us</a></li>
             </ul>
         </div>
 
     </div>
 </nav>
+
+<div class="container-fluid pkgCont">
+    <img class="col-sm-6" src="../images/sample.jpg">
+    <div class="col-sm-6 pkgRates">
+        <div class="ratesWrapper">
+            <h2>Event</h2>
+            <h4>Package 1</h4>
+            <p class="rateSpacer"></p>
+            <p><span class="desc">3 Hours</span> <span class="price">Ksh. 9,000</span></p>
+            <p><span class="desc">Half Day</span> <span class="price">Ksh. 20,000</span></p>
+            <p><span class="desc">Full Day</span> <span class="price">Ksh. 35,000</span></p>
+        </div>
+        <p class="total"><span class="desc">Price</span> <span class="price">Ksh. 35,000</span></p>
+    </div>
+</div>
+
+<div class="container-fluid pkgCont">
+    <div class="col-sm-6 pkgRates" style="padding-right: 5vw">
+        <div class="ratesWrapper">
+            <h2>Family</h2>
+            <h4>Package 2</h4>
+            <p class="rateSpacer"></p>
+            <p><span class="desc">150 Mins</span> <span class="price"></span></p>
+            <p><span class="desc">20 Edited Pics</span> <span class="price"></span></p>
+            <p><span class="desc">A3 Mounting</span> <span class="price"></span></p>
+            <p><span class="desc">An extra hour</span> <span class="price">Ksh. 2,000</span></p>
+        </div>
+        <p class="total"><span class="desc">Price</span> <span class="price">KSH. 7,500</span></p>
+    </div>
+    <img class="col-sm-6" src="../images/sample2.jpg">
+</div>
+
+<div class="container-fluid pkgCont">
+    <img class="col-sm-6" src="../images/sample3.jpg">
+    <div class="col-sm-6 pkgRates">
+        <div class="ratesWrapper">
+            <h2>Portrait</h2>
+            <h4>Package 3</h4>
+            <p class="rateSpacer"></p>
+            <p><span class="desc">100 Mins</span> <span class="price"></span></p>
+            <p><span class="desc">15 Edited Pics</span> <span class="price"></span></p>
+            <p><span class="desc">Extra Pic</span> <span class="price">300</span></p>
+            <p><span class="desc">Extra Hour</span> <span class="price">1500</span></p>
+        </div>
+        <p class="total"><span class="desc">Price</span> <span class="price">Ksh. 45,000</span></p>
+    </div>
+</div>
+
+<div class="container-fluid pkgCont">
+    <div class="col-sm-6 pkgRates" style="padding-right: 5vw">
+        <div class="ratesWrapper">
+            <h2>Real Estate</h2>
+            <h4>Package 4</h4>
+            <p class="rateSpacer"></p>
+            <p><span class="desc">Half Day On Site</span> <span class="price">Ksh. 25,000</span></p>
+            <p><span class="desc">Full Day On Site</span> <span class="price">Ksh. 45,000</span></p>
+        </div>
+        <p class="total"><span class="desc">Price</span> <span class="price">Ksh. 45,000</span></p>
+    </div>
+    <img class="col-sm-6" src="../images/sample4.jpg">
+</div>
+
+<div class="container-fluid pkgCont">
+    <img class="col-sm-6" src="../images/sample5.jpg">
+    <div class="col-sm-6 pkgRates">
+        <div class="ratesWrapper">
+            <h2>Wedding</h2>
+            <h4>Package 5</h4>
+            <p class="rateSpacer"></p>
+            <p><span class="desc">12 Hours</span> <span class="price"></span></p>
+            <p><span class="desc">Unlimited Pictures</span> <span class="price"></span></p>
+            <p><span class="desc">Two Mounted Pictures</span> <span class="price"></span></p>
+            <p><span class="desc">Engagement Shoot</span> <span class="price"></span></p>
+            <p><span class="desc">Videography</span> <span class="price"></span></p>
+            <p><span class="desc">Wedding Video Trailer</span> <span class="price"></span></p>
+        </div>
+        <p class="total"><span class="desc">Price</span> <span class="price">Ksh. 65,000</span></p>
+    </div>
+</div>
+
+<div class="container-fluid msgCont">
+    <h2 style="font-weight: 100; text-transform: uppercase; margin-bottom: 3vh">Detailed Pricing for Custom Packages are Available</h2>
+    <ul class="pagination">
+        <li style="font-weight: 200; text-transform: uppercase"><a href="../pdf/VallejosAchieve3000SS.pdf">Click Here</a></li>
+    </ul>
+</div>
+
 </body>
+
+<footer class="footerCnt">
+    <div class="container-fluid msgCont">
+        <h4 style="font-weight: 200">I will end it all :)</h4>
+    </div>
+</footer>
 </html>
