--- a/pages/phonePhotography.html
+++ b/pages/phonePhotography.html
@@ -42,7 +42,7 @@
                 </li>
 
                 <li><a href="packages.html">Packages</a></li>
-                <li><a href="contacts.html">Contacts</a></li>
+                <li><a href="inquiry.html">Inquire</a></li>
                 <li><a href="aboutUs.html">About Us</a></li>
             </ul>
         </div>
