footer and picture changes needed. about us too

--- a/pages/inquiry.html
+++ b/pages/inquiry.html
@@ -11,6 +11,7 @@
     <script src="../style/javascript/validator.js"></script>
     <script src="../style/javascript/navJS.js"></script>
     <script src="../style/javascript/dataSend.js"></script>
+    <script src="../style/javascript/api/sendEmail.js"></script>
     <link rel="stylesheet" href="../style/css/mystyle.css">
     <script>
         $(document).ready(function() {
