footer and picture changes needed. about us too

--- a/pages/inquiry.html
+++ b/pages/inquiry.html
@@ -10,8 +10,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="../style/javascript/validator.js"></script>
     <script src="../style/javascript/navJS.js"></script>
-    <script src="../style/javascript/dataSend.js"></script>
-    <script src="../style/javascript/api/sendEmail.js"></script>
     <link rel="stylesheet" href="../style/css/mystyle.css">
     <script>
         $(document).ready(function() {
@@ -90,7 +88,7 @@
         </div>
 
         <div class="col-sm-6 inpCont">
-            <form id="inquiryForm">
+            <form>
                 <h2 style="text-transform: uppercase; font-weight: 200;">Inquiry Form</h2>
                 <p style="text-transform: uppercase; font-weight: 200; margin-bottom: 5vh">Have a question? Want to set up an appointment? Fill up the form below and we'll get back to you ASAP!</p>
                 <div class="row">
