--- a/index.html
+++ b/index.html
@@ -138,23 +138,24 @@
 </body>
 
 <footer class="footerCnt palette">
-    <div class="container-fluid msgCont" style="height: 20vh">
+    <div class="container-fluid msgCont" style="height: 25vh">
         <div class="row">
             <h4 style="font-weight: 200">HOMBOI PHOTOGRAPHY®</h4>
 
             <h4 style="font-weight: 200"> © 2025 Created by Entila,Vallejos,Seneca,Jabes,Lacanlale. </h4>
-            <h4>Email us: <a href="homboiphotography@gmail.com">homboiphotography@gmail.com</a></h4>
+            <h4>Email us: <a href="homboiphotography@gmail.com" style="text-transform: initial; text-decoration: none; color: #f1f1f1">homboiphotography@gmail.com</a></h4>
 
             <div class="social-links">
                 <h4>FOLLOW US</h4>
-                <a href="https://web.facebook.com/profile.php?id=100009121068622&_rdc=1&_rdr#" target="_blank">
-                    <i class="fa-brands fa-facebook"></i>
+                <a href="https://web.facebook.com/profile.php?id=100009121068622&_rdc=1&_rdr#" target="_blank" style="margin-right: 1vw">
+                    <i class="fa-brands fa-facebook" style="color: #f1f1f1"></i>
                 </a>
                 <a href="https://www.instagram.com/homboi_001?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
-                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-instagram" style="color: #f1f1f1"></i>
                 </a>
             </div>
         </div>
     </div>
 </footer>
+
 </html>
